[project]
dependencies = ['setuptools', 'scipy', 'biopython', 'scipy', 'seaborn', 'matplotlib', 'pyrodigal']
name = "codoff"
authors = [{name="Rauf Salamzade", email="salamzader@gmail.com"}]
version = "1.1.8"
readme = "README.md"
description = "Program to measure the irregularity of the codon usage for a single genomic region (e.g. a BGC, phage, etc.) relative to the full genome."

[build-system]
requires = ['setuptools']
build-backend = "setuptools.build_meta"

[tool.setuptools]
script-files=["bin/codoff"]

[tool.setuptools.packages.find]
where = ["src"]
